Added basic Bootstrap website
Created a basic website with a Gunn red-and-black theme

Contains about, FAQs, and sponsor information.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 -->
 
 <!doctype html>
-<html>
-  <head lang="en">
+
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>GunnHacks | March 14-15, 2015</title>
     <link rel="icon" type="image/png" href="~~~~~~~~~~~~~~~~~~~~" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -38,25 +38,193 @@
 
     <!-- Twitter Bootstrap -->
     <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.css" media="screen">
+    <link rel="stylesheet" href="css/bootswatch.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="../bower_components/html5shiv/dist/html5shiv.js"></script>
+      <script src="../bower_components/respond/dest/respond.min.js"></script>
+    <![endif]-->
   </head>
+  <body gram_dict="true">
+    <div class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <a href="#" class="navbar-brand">GunnHacks</a>
+          <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+        <div class="navbar-collapse collapse" id="navbar-main">
+          <ul class="nav navbar-nav">
+            <li class="dropdown">
+              <li>
+              <a href="#about">About</a>
+            </li>
+            <li>
+              <a href="#faq">FAQ</a>
+            </li>
+            <li>
+              <a href="#sponsors">Sponsors</a>
+            </li>
+          </ul>
 
-  <body>
-    <div>
-      GunnHacks is coming this fall 2014! We're currently ironing out a lot of details, including sponsors, venue, location, and dates.
-    </div>
-    <div>
-      Check back soon for a totally revamped website (yes there will be css finally) and registration.
-    </div>
-    <div>
-      - The GunnHacks Team
-    </div>
-    <div>
-      (P.S. if you are interested in sponsoring us, please contact us at <a href="mailto:sponsor@gunnhacks.com">sponsor@gunnhacks.com</a> so we can get in touch)
-    </div>
-  </body> 
+<!--           <ul class="nav navbar-nav navbar-right">
+          </ul> -->
 
-  <!-- Scripts -->
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+        </div>
+      </div>
+    </div>
 
-  <!-- Google Analytics -->
+
+    <div class="container" id="header">
+
+      <div class="page-header" id="banner">
+        <div class="row">
+          <div class="col-lg-8 col-md-7 col-sm-6">
+            <h1>GunnHacks</h1>
+            <p class="lead">March 14-15, 2015</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Containers
+      ================================================== -->
+      <div class="bs-docs-section" id="about">
+
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="bs-component">
+              <div class="jumbotron">
+                <h1>GunnHacks</h1>
+                <p>It's coming to Palo Alto this spring. Get ready.</p>
+                <p><a class="btn btn-primary btn-lg" disabled>Registration Coming Soon!</a></p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      <!-- FAQ
+      ================================================== -->
+      <div class="bs-docs-section">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="page-header">
+              <h1 id="type">FAQ</h1>
+            </div>
+          </div>
+        </div>
+
+        <!-- Headings -->
+
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="bs-component">
+              <h1>What is a hackathon?</h1>
+              <p><a href="//medium.com/@alexkern/what-is-a-hackathon-c2162b893b0a">Hackathons are where your crazy idea becomes reality.</a> Students work in teams for 24 hours to create something amazing. Build anything&mdash;there are no restrictions on what you can create. Dive in and make the most incredible thing you can alongside fellow creators. While some may see hackers as the crazy ones, we see genius.</p>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="bs-component">
+              <h1>Who can attend?</h1>
+              <p>All high school students from any high school are eligible. We are also welcoming aspiring middle school students on a limited basis?</p>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="bs-component">
+              <h1>What if I don't know how to code?</h1>
+              <p>All students regardless of coding ability are welcome. Hackathons are a great place to learn, so come and build your first app or website! We'll also have workshops for you to learn something new.</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="bs-component">
+              <h1>What if I don't have a team or an idea?</h1>
+              <p>No problem! Many hackers do not have a fully-formed team or hack concept before the event begins. We will be hosting team-forming activities after hacking begins to help you find the perfect match. If you’re a first-time hacker, there will be many others looking for team members with whom you can pair.</p>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="bs-component">
+              <h1>What can I build?</h1>
+              <p>Web, mobile, hardware, you name it. Any type of project is welcome. Projects will be judged based on creativity, technical difficulty, polish, and utility by a panel of industry judges.</p>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="bs-component">
+              <h1>Who can attend?</h1>
+              <p>All high school students from any high school are eligible. We are also welcoming aspiring middle school students on a limited basis?</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="bs-component">
+              <h1>How big should teams be? Can I hack alone?</h1>
+              <p>We highly encourage you to build with a team. Teamwork is deeply rooted in the hacking ethos, and you'll have a better time building with your brightest peers. Teams should be at most five people.</p>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="bs-component">
+              <h1>How much does it cost?</h1>
+              <p>Cal Hacks is free for all accepted hackers. We will provide your WiFi, meals, swag, and workspace for the entire weekend.</p>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="bs-component">
+              <h1>What should I bring?</h1>
+              <p>All attendees are required to bring their valid student ID (or equivalent school ID) for admission. Bring laptops, phones, chargers, and any other electronics you need for the weekend. Sleeping bags, and toiletries are highly recommended.</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="bs-component">
+              <h1>How do I register?</h1>
+              <p>Registration will be up soon here.</p>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="bs-component">
+              <h1>What if I have another question?</h1>
+              <p>Please feel free to reach out to us at <a href="mailto:info@gunnhacks.com">info@gunnhacks.com</a>.</p>
+            </div>
+          </div>
+        </div>
+
+      <!-- Sponsors
+      ================================================== -->
+      <div class="bs-docs-section" id="sponsors">
+
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="bs-component">
+              <div class="jumbotron">
+                <h1>Sponsors</h1>
+                <p>Interested in sponsoring? Contact us at <a href="mailto:sponsor@gunnhacks.com">sponsor@gunnhacks.com</a> and check out our <a href="sponsor.pdf">sponsorship packet</a>.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <footer>
+        <div class="row">
+          <div class="col-lg-12">
+            <p>Made with <i class="red fa fa-heart"></i> by the GunnHacks team.
+          </div>
+        </div>
+      </footer>
+    </body>
+
+    <!-- Scripts -->
+    <script src="js/index.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+
+    <!-- Google Analytics -->
+  
 </html>
