--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
  | | |_ | | | | '_ \| '_ \|  __  |/ _` |/ __| |/ / __|
  | |__| | |_| | | | | | | | |  | | (_| | (__|   <\__ \
   \_____|\__,_|_| |_|_| |_|_|  |_|\__,_|\___|_|\_\___/
+
 -->
 
 <!doctype html>
@@ -84,15 +85,6 @@
 
     <div class="container" id="header">
 
-      <div class="page-header" id="banner">
-        <div class="row">
-          <div class="col-lg-8 col-md-7 col-sm-6">
-            <h1>GunnHacks</h1>
-            <p class="lead">March 14-15, 2015</p>
-          </div>
-        </div>
-      </div>
-
       <!-- Containers
       ================================================== -->
       <div class="bs-docs-section" id="about">
@@ -100,26 +92,13 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="bs-component">
-              <div class="jumbotron splash dimmable">
+              <div class="jumbotron">
                 <h1>GunnHacks</h1>
-                <p>It's coming to Palo Alto this spring. Get ready.</p>
-                <div class="ui dimmer transition hidden" style="display: none;">
-                  <div class="content">
-                    <div class="center">
-                      <h2 class="ui inverted icon header">
-                        Thanks, we'll email you when registration opens :)
-                      </h2>
-                    </div>
-                  </div>
-                </div>
-                <div class="action">
-                  <div class="ui input">
-                    <input class="form-control" id="email" type="email" autocomplete="off" placeholder="Enter your Email" required>
-                  </div>
-                  <button type="submit" id="submit" class="btn btn-default">
-                    Submit
-                  </button>
-                  <input type="hidden" name="_next">
+                <p>March 14-15, 2015</p>
+                <div class="contact-form">
+                  <form id="signup">
+                    <input type="email" placeholder="Get notified when registration opens..." class="email" style="cursor: auto;"><input type="submit" value="Submit">
+                  </form>
                 </div>
               </div>
             </div>
@@ -149,7 +128,7 @@
           <div class="col-lg-4">
             <div class="bs-component">
               <h1>Who can attend?</h1>
-              <p>All high school students from any high school are eligible. We are also welcoming aspiring middle school students on a limited basis?</p>
+              <p>All high school students from any high school are eligible. We may also welcome aspiring middle school students on a limited basis.</p>
             </div>
           </div>
           <div class="col-lg-4">
@@ -174,18 +153,12 @@
           </div>
           <div class="col-lg-4">
             <div class="bs-component">
-              <h1>Who can attend?</h1>
-              <p>All high school students from any high school are eligible. We may also welcome aspiring middle school students on a limited basis.</p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-4">
-            <div class="bs-component">
               <h1>How big should teams be? Can I hack alone?</h1>
               <p>We highly encourage you to build with a team. Teamwork is deeply rooted in the hacking ethos, and you'll have a better time building with your brightest peers. Teams should be at most five people.</p>
             </div>
           </div>
+        </div>
+        <div class="row">
           <div class="col-lg-4">
             <div class="bs-component">
               <h1>How much does it cost?</h1>
@@ -195,17 +168,17 @@
           <div class="col-lg-4">
             <div class="bs-component">
               <h1>What should I bring?</h1>
-              <p>All attendees are required to bring their valid student ID (or equivalent school ID) for admission. Bring laptops, phones, chargers, and any other electronics you need for the weekend. Sleeping bags, and toiletries are highly recommended.</p>
+              <p>All attendees are required to bring their valid student ID (or equivalent school ID) for admission. Bring laptops, phones, chargers, and any other tech you need for the weekend. Sleeping bags, and toiletries are highly recommended.</p>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="bs-component">
+              <h1>How do I register?</h1>
+              <p>Registration will be up soon here. In the meantime, sign up above to be emailed when registrations open.</p>
             </div>
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-4">
-            <div class="bs-component">
-              <h1>How do I register?</h1>
-              <p>Registration will be up soon here.</p>
-            </div>
-          </div>
           <div class="col-lg-4">
             <div class="bs-component">
               <h1>What if I have another question?</h1>
@@ -241,8 +214,8 @@
 
     <!-- Scripts -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="js/index.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="js/index.js"></script>
     <script src="js/form.js"></script>
 
     <!-- Google Analytics -->
