--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!--
-	 _____                   _    _            _        
-	/ ____|                 | |  | |          | |       
- | |  __ _   _ _ __  _ __ | |__| | __ _  ___| | _____ 
- | | |_ | | | | '_ \| '_ \|  __  |/ _` |/ __| |/ / __|
- | |__| | |_| | | | | | | | |  | | (_| | (__|   <\__ \
-	\_____|\__,_|_| |_|_| |_|_|  |_|\__,_|\___|_|\_\___/
-
+ _____________________________________________________ 
+/   ____                   _   _            _         \
+|  / ___|_   _ _ __  _ __ | | | | __ _  ___| | _____  |
+| | |  _| | | | '_ \| '_ \| |_| |/ _` |/ __| |/ / __| |
+| | |_| | |_| | | | | | | |  _  | (_| | (__|   <\__ \ |
+|  \____|\__,_|_| |_|_| |_|_| |_|\__,_|\___|_|\_\___/ |
+\                                                     /
+ ----------------------------------------------------- 
+        \   ^__^
+         \  (oo)\_______
+            (__)\       )\/\
+                ||----w |
+                ||     ||
 -->
 
 <!doctype html>
 
-<html lang="en" prefix="og: http://ogp.me/ns#">
+<html lang="en">
 	<head>
 		<title>GunnHacks | March 14&ndash;15, 2015</title>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -19,8 +25,7 @@
 		<link rel="icon" type="image/png" href="img/favicon.png" />
 
 		<!-- Google -->
-		<meta name="description" content="Make, Build, Create &amp; Learn. Join us from March 14&ndash;15 for Gunn's inaugural 24-hour high school hackathon." />
-		<!-- <meta name="keywords" content="GunnHacks, Henry M. Gunn High School, Gunn, student, hackathon, Palo Alto, Bay Area" /> -->
+		<meta name="description" content="Make, Build, Create &amp; Learn. Join us from March 14&ndash;15 for Gunn's inaugural 24&#8209;hour high school hackathon." />
 		<meta name="copyright" content="GunnHacks" />
 
 		<!-- Facebook -->
@@ -29,22 +34,25 @@
 		<meta property="og:type" content="website" />
 		<meta property="og:image" content="img/logo.png" />
 		<meta property="og:url" content="http://gunnhacks.com" />
-		<meta property="og:description" content="Make, Build, Create &amp; Learn. Join us from March 14&ndash;15 for Gunn's inaugural 24-hour high school hackathon." />
+		<meta property="og:description" content="Make, Build, Create &amp; Learn. Join us from March 14&ndash;15 for Gunn's inaugural 24&#8209;hour high school hackathon." />
 
 		<!-- Twitter -->
 		<meta name="twitter:card" content="summary" />
 		<meta name="twitter:site" content="@GunnHacks" />
 		<meta name="twitter:creator" content="@GunnHacks" />
 		<meta name="twitter:title" content="GunnHacks | March 14&ndash;15, 2015" />
-		<meta name="twitter:description" content="Make, Build, Create &amp; Learn. Join us from March 14&ndash;15 for Gunn's inaugural 24-hour high school hackathon." />
+		<meta name="twitter:description" content="Make, Build, Create &amp; Learn. Join us from March 14&ndash;15 for Gunn's inaugural 24&#8209;hour high school hackathon." />
 		<meta name="twitter:image" content="img/logo.png" />
 		<meta name="twitter:url" content="http://gunnhacks.com" />
 		<meta name="twitter:domain" content="gunnhacks.com" />
 
-		<!-- Twitter Bootstrap -->
-		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-		<link rel="stylesheet" href="css/styles.css">
+		<!-- Twitter Bootstrap and CSS -->
+		<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+        <link href="css/ripples.min.css" rel="stylesheet">
+        <link href="css/material.min.css" rel="stylesheet">
+        <link href="css/tooltipster.css" rel="stylesheet">
+		<link href="css/styles.css" rel="stylesheet">
 
 		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!--[if lt IE 9]>
@@ -53,11 +61,11 @@
 		<![endif]-->
 	</head>
 	<body>
-		<div class="navbar navbar-default navbar-fixed-top">
+		<div class="navbar navbar-danger navbar-fixed-top">
 			<div class="container">
 				<div class="navbar-header">
 					<a href="#" class="navbar-brand">
-						<img src="img/logo.png" alt="GunnHacks">&nbsp;GunnHacks
+						<img src="img/favicon.png" alt="GunnHacks">&nbsp;GunnHacks
 					</a>
 					<button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
 						<span class="icon-bar"></span>
@@ -65,7 +73,7 @@
 						<span class="icon-bar"></span>
 					</button>
 				</div>
-				<div class="navbar-collapse collapse" id="navbar-main header">
+				<div class="navbar-collapse collapse" id="navbar-main">
 					<ul class="nav navbar-nav">
 						<li class="dropdown">
 						<li><a href="#about">About</a></li>
@@ -79,24 +87,21 @@
 
 		<div id="about">
 			<div id="about-content" class="container">
-				<div class="col-lg-6 col-md-12 col-sm-12">
-					<div class="row">
-						<div id="title" class="col-md-8 col-pull-4">
-							<h1>
-								GunnHacks
-								<br>
-								<small>March 14&ndash;15, 2015</small>
-							</h1>
-						</div>
-						<div class="col-md-4 col-push-8" id="about-img">
-							<img src="img/logo.svg" alt="GunnHacks">
-						</div>
+				<div>
+					<div id="about-img">
+						<img src="img/logo.svg" alt="GunnHacks">
+					</div>
+					<div id="title">
+						<h1>
+							GunnHacks
+							<br>
+							<small>March 14&ndash;15, 2015</small>
+						</h1>
 					</div>
 					<div class="contact-form">
 						<form id="signup">
-							<input type="email" placeholder="Get notified when registration opens..." class="email" style="cursor: auto;"><input type="submit" value="Submit">
+							<input type="email" placeholder="Get notified to register..." class="email" style="cursor: auto;"><input type="submit" value="Submit">
 						</form>
-					</div>
 					</div>
 				</div>
 			</div>
@@ -110,71 +115,129 @@
 					<h1 id="faqs">FAQ</h1>
 				</div>
 
-				<div class="row">
-					<div class="col-lg-4">
-						<div>
-							<h2>What is a hackathon?</h2>
-							<p><a href="//medium.com/@alexkern/what-is-a-hackathon-c2162b893b0a">Hackathons are where your crazy idea becomes reality.</a> Students work in teams for 24 hours to create something amazing. Build anything&mdash;there are no restrictions on what you can create. Dive in and make the most incredible thing you can alongside fellow creators. While some may see hackers as the crazy ones, we see genius.</p>
+				<div class="col-lg-4 panel-group">
+					<div class="panel panel-default panel-faq">
+						<div class="panel-heading">
+							<a data-toggle="collapse" href="#faq-1">
+								<h4 class="panel-title">What is a hackathon?</h4>
+							</a>
+						</div>
+						<div id="faq-1" class="panel-collapse collapse in">
+							<div class="panel-body">
+								<a href="//medium.com/@alexkern/what-is-a-hackathon-c2162b893b0a">Hackathons are where your crazy idea becomes reality.</a> Students work in teams for 24 hours to create something amazing. Build anything&mdash;there are no restrictions on what you can create. Dive in and make the most incredible thing you can alongside fellow creators.
+							</div>
 						</div>
 					</div>
-					<div class="col-lg-4">
-						<div>
-							<h2>Who can attend?</h2>
-							<p>All high school students from any high school are eligible. We may also welcome aspiring middle school students on a limited basis.</p>
+					<div class="panel panel-default panel-faq">
+						<div class="panel-heading">
+							<a data-toggle="collapse" href="#faq-2">
+								<h4 class="panel-title">What can I build?</h4>
+							</a>
+						</div>
+						<div id="faq-2" class="panel-collapse collapse in">
+							<div class="panel-body">
+								Web, mobile, hardware, you name it. Any type of project is welcome. Projects will be judged based on creativity, technical difficulty, polish, and utility by a panel of industry judges.
+							</div>
 						</div>
 					</div>
-					<div class="col-lg-4">
-						<div>
-							<h2>What if I don't know how to code?</h2>
-							<p>All students regardless of coding ability are welcome. Hackathons are a great place to learn, so come and build your first app or website! We'll also have workshops for you to learn something new.</p>
+					<div class="panel panel-default panel-faq">
+						<div class="panel-heading">
+							<a data-toggle="collapse" href="#faq-3">
+								<h4 class="panel-title">How much does it cost?</h4>
+							</a>
+						</div>
+						<div id="faq-3" class="panel-collapse collapse in">
+							<div class="panel-body">
+								GunnHacks is free for all accepted hackers. We will provide your WiFi, meals, swag, and workspace for the entire weekend.
+							</div>
 						</div>
 					</div>
-				</div>
-				<div class="row">
-					<div class="col-lg-4">
-						<div>
-							<h2>What if I don't have a team or an idea?</h2>
-							<p>No problem! Many hackers do not have a fully-formed team or hack concept before the event begins. We will be hosting team-forming activities after hacking begins to help you find the perfect match. If you’re a first-time hacker, there will be many others looking for team members with whom you can pair.</p>
+					<div class="panel panel-default panel-faq">
+						<div class="panel-heading">
+							<a data-toggle="collapse" href="#faq-4">
+								<h4 class="panel-title">What if I have another question?</h4>
+							</a>
 						</div>
-					</div>
-					<div class="col-lg-4">
-						<div>
-							<h2>What can I build?</h2>
-							<p>Web, mobile, hardware, you name it. Any type of project is welcome. Projects will be judged based on creativity, technical difficulty, polish, and utility by a panel of industry judges.</p>
-						</div>
-					</div>
-					<div class="col-lg-4">
-						<div>
-							<h2>How big should teams be? Can I hack alone?</h2>
-							<p>We highly encourage you to build with a team. Teamwork is deeply rooted in the hacking ethos, and you'll have a better time building with your brightest peers. Teams should be at most five people.</p>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-lg-4">
-						<div>
-							<h2>How much does it cost?</h2>
-							<p>GunnHacks is free for all accepted hackers. We will provide your WiFi, meals, swag, and workspace for the entire weekend.</p>
-						</div>
-					</div>
-					<div class="col-lg-4">
-						<div>
-							<h2>What should I bring?</h2>
-							<p>All attendees are required to bring their valid student ID (or equivalent school ID) for admission. Bring laptops, phones, chargers, and any other tech you need for the weekend. Sleeping bags, and toiletries are highly recommended.</p>
-						</div>
-					</div>
-					<div class="col-lg-4">
-						<div>
-							<h2>How do I register?</h2>
-							<p>Registration will be up soon here. In the meantime, sign up above to be emailed when registrations open.</p>
+						<div id="faq-4" class="panel-collapse collapse in">
+							<div class="panel-body">
+								Please feel free to reach out to us at <a href="mailto:info@gunnhacks.com">info@gunnhacks.com</a>.
+							</div>
 						</div>
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-lg-4">
-						<div>
-							<h2>What if I have another question?</h2>
-							<p>Please feel free to reach out to us at <a href="mailto:info@gunnhacks.com">info@gunnhacks.com</a>.</p>
+				<div class="col-lg-4 panel-group">
+					<div class="panel panel-default panel-faq">
+						<div class="panel-heading">
+							<a data-toggle="collapse" href="#faq-5">
+								<h4 class="panel-title">Who can attend?</h4>
+							</a>
+						</div>
+						<div id="faq-5" class="panel-collapse collapse in">
+							<div class="panel-body">
+								All high school students from any high school are eligible. Unfortunately, we are unable to allow middle school students to attend this year.
+							</div>
+						</div>
+					</div>
+					<div class="panel panel-default panel-faq">
+						<div class="panel-heading">
+							<a data-toggle="collapse" href="#faq-6">
+								<h4 class="panel-title">How big should teams be? Can I hack alone?</h4>
+							</a>
+						</div>
+						<div id="faq-6" class="panel-collapse collapse in">
+							<div class="panel-body">
+								We highly encourage you to build with a team. Teamwork is deeply rooted in the hacking ethos, and you'll have a better time building with your brightest peers. Teams should be at most five people.
+							</div>
+						</div>
+					</div>
+					<div class="panel panel-default panel-faq">
+						<div class="panel-heading">
+							<a data-toggle="collapse" href="#faq-7">
+								<h4 class="panel-title">What should I bring?</h4>
+							</a>
+						</div>
+						<div id="faq-7" class="panel-collapse collapse in">
+							<div class="panel-body">
+								All attendees are required to bring their valid student ID (or equivalent school ID) for admission. Bring laptops, phones, chargers, and any other tech you need for the weekend. Sleeping bags, and toiletries are highly recommended.
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 panel-group">
+					<div class="panel panel-default panel-faq">
+						<div class="panel-heading">
+							<a data-toggle="collapse" href="#faq-8">
+								<h4 class="panel-title">What if I don't know how to code?</h4>
+							</a>
+						</div>
+						<div id="faq-8" class="panel-collapse collapse in">
+							<div class="panel-body">
+								All students regardless of coding ability are welcome. Hackathons are a great place to learn, so come and build your first app or website! We'll also have workshops for you to learn something new.
+							</div>
+						</div>
+					</div>
+					<div class="panel panel-default panel-faq">
+						<div class="panel-heading">
+							<a data-toggle="collapse" href="#faq-9">
+								<h4 class="panel-title">What if I don't have a team or an idea?</h4>
+							</a>
+						</div>
+						<div id="faq-9" class="panel-collapse collapse in">
+							<div class="panel-body">
+								No problem! Many hackers do not have a fully-formed team or hack concept before the event begins. We will be hosting team-forming activities after hacking begins to help you find the perfect match. If you're a first-time hacker, there will be many others looking for team members with whom you can work.
+							</div>
+						</div>
+					</div>
+					<div class="panel panel-default panel-faq">
+						<div class="panel-heading">
+							<a data-toggle="collapse" href="#faq-10">
+								<h4 class="panel-title">How do I register?</h4>
+							</a>
+						</div>
+						<div id="faq-10" class="panel-collapse collapse in">
+							<div class="panel-body">
+								Registration will be up soon here. In the meantime, sign up above to be emailed when registrations open.
+							</div>
 						</div>
 					</div>
 				</div>
@@ -194,11 +257,16 @@
 									<h1 id="sponsors">Sponsors</h1>
 								</div>
 								<div class="sponsor_logo tier1">
-									<a href="//paleyontology.com">
-										<img src="img/alonzo.png">
+									<a href="//paleyontology.com" class="tooltip" title="Gunn Computer Science Department">
+										<img src="img/logo.png">
 									</a>
 								</div>
-								<p>Interested in sponsoring? Contact us at <a href="mailto:sponsor@gunnhacks.com">sponsor@gunnhacks.com</a> and check out our <a href="sponsor.pdf">sponsorship packet</a>.</p>
+								<div id="sponsor-call-to-action">
+									We're finalizing our sponsor list soon! Check out our sponsorship packages below, or shoot us an email at <a href="mailto:sponsor@gunnhacks.com">sponsor@gunnhacks.com</a> to see how you you can get involved.
+								</div>
+								<div id="sponsor-link">
+									<a href="sponsor.pdf" class="btn btn-info btn-raised">Sponsor GunnHacks</a>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -209,21 +277,21 @@
 		<footer>
 			<div class="container">
 				<span class="copyright">
-					Made with <i class="red fa fa-heart"></i> by the GunnHacks team.
+					Made with <i class="mdi-action-favorite mdi-material-red"></i> by the GunnHacks team.
 				</span>
 				<ul class="social">
 					<li>
-						<a href="mailto:info@gunnhacks.com" title="Email" target="_blank">
-							<i class="fa fa-envelope"></i>
+						<a class="btn btn-fab" href="mailto:info@gunnhacks.com" title="Email" target="_blank">
+							<i class="mdi-communication-email"></i>
 						</a>
 					</li>
 					<li>
-						<a href="http://facebook.com/GunnHacks" title="Facebook" target="_blank">
+						<a class="btn btn-fab" href="http://facebook.com/GunnHacks" title="Facebook" target="_blank">
 							<i class="fa fa-facebook"></i>
 						</a>
 					</li>
 					<li>
-						<a href="http://twitter.com/GunnHacks" title="Twitter" target="_blank">
+						<a class="btn btn-fab" href="http://twitter.com/GunnHacks" title="Twitter" target="_blank">
 							<i class="fa fa-twitter"></i>
 						</a>
 					</li>
@@ -237,7 +305,9 @@
 		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 		<script src="js/index.js"></script>
 		<script src="js/form.js"></script>
-		<!--<script src="js/menu.js"></script>-->
+        <script src="js/ripples.min.js"></script>
+        <script src="js/material.min.js"></script>
+        <script src="js/jquery.tooltipster.min.js"></script>
 
 		<!-- Google Analytics -->
 		<script>
