--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 |  \____|\__,_|_| |_|_| |_|_| |_|\__,_|\___|_|\_\___/ |
 \                                                     /
  ----------------------------------------------------- 
-        \   ^__^
-         \  (oo)\_______
-            (__)\       )\/\
-                ||----w |
-                ||     ||
+		\   ^__^
+		 \  (oo)\_______
+			(__)\       )\/\
+				||----w |
+				||     ||
 -->
 
 <!doctype html>
@@ -32,7 +32,7 @@
 		<meta property="og:title" content="GunnHacks | March 14&ndash;15, 2015" />
 		<meta property="og:site_name" content="GunnHacks | March 14&ndash;15, 2015" />
 		<meta property="og:type" content="website" />
-		<meta property="og:image" content="img/logo.png" />
+		<meta property="og:image" content="img/social.png" />
 		<meta property="og:url" content="http://gunnhacks.com" />
 		<meta property="og:description" content="Make, Build, Create &amp; Learn. Join us from March 14&ndash;15 for Gunn's inaugural 24&#8209;hour high school hackathon." />
 
@@ -49,16 +49,10 @@
 		<!-- Twitter Bootstrap and CSS -->
 		<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
 		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-        <link href="css/ripples.min.css" rel="stylesheet">
-        <link href="css/material.min.css" rel="stylesheet">
-        <link href="css/tooltipster.css" rel="stylesheet">
+		<link href="css/ripples.min.css" rel="stylesheet">
+		<link href="css/material.min.css" rel="stylesheet">
+		<link href="css/tooltipster.css" rel="stylesheet">
 		<link href="css/styles.css" rel="stylesheet">
-
-		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-		<!--[if lt IE 9]>
-			<script src="../bower_components/html5shiv/dist/html5shiv.js"></script>
-			<script src="../bower_components/respond/dest/respond.min.js"></script>
-		<![endif]-->
 	</head>
 	<body>
 		<div class="navbar navbar-danger navbar-fixed-top">
@@ -95,7 +89,11 @@
 						<h1>
 							GunnHacks
 							<br>
-							<small>March 14&ndash;15, 2015</small>
+							<small>
+								March 14&ndash;15, 2015
+								<br>
+								2 pm&ndash; 2 pm
+							</small>
 						</h1>
 					</div>
 					<div class="contact-form">
@@ -300,24 +298,24 @@
 		</footer>
 	</body>
 
-		<!-- Scripts -->
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-		<script src="js/index.js"></script>
-		<script src="js/form.js"></script>
-        <script src="js/ripples.min.js"></script>
-        <script src="js/material.min.js"></script>
-        <script src="js/jquery.tooltipster.min.js"></script>
+	<!-- Scripts -->
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+	<script src="js/index.js"></script>
+	<script src="js/form.js"></script>
+	<script src="js/ripples.min.js"></script>
+	<script src="js/material.min.js"></script>
+	<script src="js/jquery.tooltipster.min.js"></script>
 
-		<!-- Google Analytics -->
-		<script>
-			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	<!-- Google Analytics -->
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-			ga('create', 'UA-58223012-1', 'auto');
-			ga('send', 'pageview');
-		</script>
+		ga('create', 'UA-58223012-1', 'auto');
+		ga('send', 'pageview');
+	</script>
 	
 </html>
