--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 								</div>
 								<div class="contact-form">
 									<form id="signup">
-										<!-- Change to `Register Now!` when registration opens -->
-										<input type="email" placeholder="Get notified to register..." class="email" autofocus><input type="submit" value="Submit">
+										<!-- Change to `Apply Now!` when registration opens -->
+										<input type="email" placeholder="Apply now!" class="email" autofocus><input type="submit" value="Submit">
 									</form>
 								</div>
 							</div>
@@ -264,18 +264,18 @@
 										</div>
 									</div>
 								</div>
-								<div class="panel panel-default panel-faq">
+								<!-- <div class="panel panel-default panel-faq">
 									<div class="panel-heading">
 										<a data-toggle="collapse" href="#faq-10">
-											<h4 class="panel-title">How do I register?</h4>
+											<h4 class="panel-title">How do I apply?</h4>
 										</a>
 									</div>
 									<div id="faq-10" class="panel-collapse collapse in">
 										<div class="panel-body">
-											Registration will be up soon here. In the meantime, sign up above to be emailed when registrations open.
+											Paley's mantra here.
 										</div>
 									</div>
-								</div>
+								</div> -->
 							</div>
 						</div>
 					</div>
@@ -297,6 +297,11 @@
 													<img src="img/logo.svg">
 												</a>
 											</div>
+											<div class="sponsor_logo tier1">
+												<a href="//a16z.com" class="tooltip" title="Andreessen Horowitz">
+													<img src="img/AndreessenHorowitz.png">
+												</a>
+											</div>
 											<div id="sponsor-call-to-action">
 												We're finalizing our sponsor list soon! Check out our sponsorship packages below, or shoot us an email at <a href="mailto:sponsor@gunnhacks.com">sponsor@gunnhacks.com</a> to see how you you can get involved.
 											</div>
@@ -315,7 +320,7 @@
 					<div class="container well">
 						<form class="form-horizontal" id="registration">
 							<fieldset>
-								<legend>Register for GunnHacks</legend>
+								<legend>Apply for GunnHacks</legend>
 								<div class="form-group">
 									<label for="inputName" class="col-sm-2 col-md-2 col-lg-2 control-label">Name</label>
 									<div class="col-sm-10 col-md-10 col-lg-10">
