Made optional age & gender

--- a/index.html
+++ b/index.html
@@ -359,9 +359,12 @@
 									</div>
 								</div>
 								<div class="form-group">
-									<label for="inputAge" class="col-sm-2 col-md-2 col-lg-2 control-label">Age</label>
+									<label for="inputAge" class="col-sm-2 col-md-2 col-lg-2 control-label">
+										Age
+										<small>(Optional)</small>
+									</label>
 									<div class="col-sm-10 col-md-10 col-lg-10">
-										<input type="number" max="20" min="10" class="form-control" id="inputAge" required>
+										<input type="number" max="20" min="10" class="form-control" id="inputAge">
 									</div>
 								</div>
 								<div class="form-group">
@@ -394,23 +397,26 @@
 									</div>
 								</div>
 								<div class="form-group">
-									<label class="col-sm-2 col-md-2 col-lg-2 control-label">Gender</label>
+									<label class="col-sm-2 col-md-2 col-lg-2 control-label">
+										Gender
+										<small>(Optional)</small>
+									</label>
 									<div class="col-sm-10 col-md-10 col-lg-10">
 										<div class="radio radio-danger">
 											<label>
-												<input type="radio" name="gender" id="radioMale" value="Male" required>
+												<input type="radio" name="gender" id="radioMale" value="Male">
 												Male
 											</label>
 										</div>
 										<div class="radio radio-danger">
 											<label>
-												<input type="radio" name="gender" id="radioFemale" value="Female" required>
+												<input type="radio" name="gender" id="radioFemale" value="Female">
 												Female
 											</label>
 										</div>
 										<div class="radio radio-danger">
 											<label>
-												<input type="radio" name="gender" id="radioOther" value="Other" required>
+												<input type="radio" name="gender" id="radioOther" value="Other">
 												I don't identify with the choices above. I identify as <input type="text" class="form-control" id="genderOther" disabled>
 											</label>
 										</div>
