--- a/index.html
+++ b/index.html
@@ -297,11 +297,11 @@
 													<img src="img/logo.svg">
 												</a>
 											</div>
-											<div class="sponsor_logo tier1">
+											<!-- <div class="sponsor_logo tier1">
 												<a href="//a16z.com" class="tooltip" title="Andreessen Horowitz">
 													<img src="img/AndreessenHorowitz.png">
 												</a>
-											</div>
+											</div> -->
 											<div id="sponsor-call-to-action">
 												We're finalizing our sponsor list soon! Check out our sponsorship packages below, or shoot us an email at <a href="mailto:sponsor@gunnhacks.com">sponsor@gunnhacks.com</a> to see how you you can get involved.
 											</div>
