--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 								<div class="contact-form">
 									<form id="signup">
 										<!-- Change to `Apply Now!` when registration opens -->
-										<input type="email" placeholder="Apply now!" class="email" autofocus><input type="submit" value="Submit">
+										<input type="email" placeholder="Enter you email to apply now!" class="email" autofocus><input type="submit" value="Submit">
 									</form>
 								</div>
 							</div>
