--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 										<small>(Optional)</small>
 									</label>
 									<div class="col-sm-10 col-md-10 col-lg-10">
-										<input type="number" max="20" min="10" class="form-control" id="inputAge">
+										<input type="number" max="20" min="10" class="form-control" id="inputAge" pattern="\d*">
 									</div>
 								</div>
 								<div class="form-group">
@@ -521,7 +521,7 @@
 										<small>(Optional)</small>
 									</label>
 									<div class="col-sm-10 col-md-10 col-lg-10">
-										<input type="text" class="form-control" id="inputWebsite" placeholder="http://kennoh.com">
+										<input type="url" class="form-control" id="inputWebsite" placeholder="http://kennoh.com">
 									</div>
 								</div>
 								<div class="form-group">
@@ -532,7 +532,7 @@
 									<div class="col-sm-10 col-md-10 col-lg-10">
 										<div class="input-group">
 											<span class="input-group-addon">https://www.github.com/</span>
-											<input type="text" class="form-control floating-label" id="inputGitHub" placeholder="username">
+											<input type="text" class="form-control floating-label" id="inputGitHub" placeholder="username" autocapitalize="off">
 										</div>
 									</div>
 								</div>
@@ -544,7 +544,7 @@
 									<div class="col-sm-10 col-md-10 col-lg-10">
 										<div class="input-group">
 											<span class="input-group-addon">https://www.linkedin.com/in/</span>
-											<input type="text" class="form-control floating-label" id="inputLinkedIn" placeholder="username">
+											<input type="text" class="form-control floating-label" id="inputLinkedIn" placeholder="username" autocapitalize="off">
 										</div>
 									</div>
 								</div>
