Check if friends are null
Zapier integration to prevent frequent errors

--- a/index.html
+++ b/index.html
@@ -228,13 +228,13 @@
 								</div>
 								<div class="panel panel-default panel-faq">
 									<div class="panel-heading">
-										<a data-toggle="collapse" href="#faq-4">
-											<h4 class="panel-title">What if I have another question?</h4>
+										<a data-toggle="collapse" href="#faq-8">
+											<h4 class="panel-title">When will I know if I got accepted?</h4>
 										</a>
 									</div>
-									<div id="faq-4" class="panel-collapse collapse in">
+									<div id="faq-8" class="panel-collapse collapse in">
 										<div class="panel-body">
-											Please feel free to reach out to us at <a href="mailto:info@gunnhacks.com">info@gunnhacks.com</a>.
+											Applications close on Friday, February 13. We will release decisions by late February.
 										</div>
 									</div>
 								</div>
@@ -242,11 +242,11 @@
 							<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 panel-group">
 								<div class="panel panel-default panel-faq">
 									<div class="panel-heading">
-										<a data-toggle="collapse" href="#faq-8">
+										<a data-toggle="collapse" href="#faq-9">
 											<h4 class="panel-title">What if I don't know how to code?</h4>
 										</a>
 									</div>
-									<div id="faq-8" class="panel-collapse collapse in">
+									<div id="faq-9" class="panel-collapse collapse in">
 										<div class="panel-body">
 											All students regardless of coding ability are welcome. Hackathons are a great place to learn, so come and build your first app or website! We'll also have workshops for you to learn something new.
 										</div>
@@ -254,11 +254,11 @@
 								</div>
 								<div class="panel panel-default panel-faq">
 									<div class="panel-heading">
-										<a data-toggle="collapse" href="#faq-9">
+										<a data-toggle="collapse" href="#faq-10">
 											<h4 class="panel-title">What if I don't have a team or an idea?</h4>
 										</a>
 									</div>
-									<div id="faq-9" class="panel-collapse collapse in">
+									<div id="faq-10" class="panel-collapse collapse in">
 										<div class="panel-body">
 											No problem! Many hackers do not have a fully-formed team or hack concept before the event begins. We will be hosting team-forming activities after hacking begins to help you find the perfect match. If you're a first-time hacker, there will be many others looking for team members with whom you can work.
 										</div>
@@ -266,16 +266,28 @@
 								</div>
 								<!-- <div class="panel panel-default panel-faq">
 									<div class="panel-heading">
-										<a data-toggle="collapse" href="#faq-10">
-											<h4 class="panel-title">How do I apply?</h4>
+										<a data-toggle="collapse" href="#faq-11">
+											<h4 class="panel-title">Who will get selected?</h4>
 										</a>
 									</div>
-									<div id="faq-10" class="panel-collapse collapse in">
+									<div id="faq-11" class="panel-collapse collapse in">
 										<div class="panel-body">
-											Paley's mantra here.
+											This year we're taking 100 select hackers. We're not looking for experience or prizes, glory or fame. Our aim is to bring a diverse group of students from around the Bay in order to promote technology and computer science in a variety of schools.
 										</div>
 									</div>
 								</div> -->
+								<div class="panel panel-default panel-faq">
+									<div class="panel-heading">
+										<a data-toggle="collapse" href="#faq-12">
+											<h4 class="panel-title">What if I have another question?</h4>
+										</a>
+									</div>
+									<div id="faq-12" class="panel-collapse collapse in">
+										<div class="panel-body">
+											Please feel free to reach out to us at <a href="mailto:info@gunnhacks.com">info@gunnhacks.com</a>.
+										</div>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
