fixed navbar scrolling / added application

--- a/index.html
+++ b/index.html
@@ -254,6 +254,19 @@
 								</div>
 								<div class="panel panel-default panel-faq">
 									<div class="panel-heading">
+										<a data-toggle="collapse" href="#faq-9.5">
+											<h4 class="panel-title">How does the Application Process work?</h4>
+										</a>
+									</div>
+									<div id="faq-9.5" class="panel-collapse collapse in">
+										<div class="panel-body">
+											Applicants will be selected largely on a first come first serve basis due to our limitation on attendees. Thus, we encourage everyone from all different skill levels to apply. Beginners, do not be intimidated if you are unable to fill out certain parts of the application form!
+										</div>
+									</div>
+									
+								</div>
+								<div class="panel panel-default panel-faq">
+									<div class="panel-heading">
 										<a data-toggle="collapse" href="#faq-10">
 											<h4 class="panel-title">What if I don't have a team or an idea?</h4>
 										</a>
