Updated applicatio deadline

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 									</div>
 									<div id="faq-8" class="panel-collapse collapse in">
 										<div class="panel-body">
-											Applications close on Friday, February 13. We will release decisions by late February.
+											Applications close on Sunday, February 22. We will release decisions by late February.
 										</div>
 									</div>
 								</div>
@@ -272,7 +272,7 @@
 									</div>
 									<div id="faq-11" class="panel-collapse collapse in">
 										<div class="panel-body">
-											This year we're taking 100 select hackers. We're not looking for experience or prizes, glory or fame. Our aim is to bring a diverse group of students from around the Bay in order to promote technology and computer science in a variety of schools.
+											This year we're taking in 100 select hackers. We're not looking for experience or prizes, glory or fame. Our aim is to bring a diverse group of students from around the Bay in order to promote technology and computer science in a variety of schools. Past experience will not be considered.
 										</div>
 									</div>
 								</div> -->
