--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--
+f<!--
  _____________________________________________________ 
 /   ____                   _   _            _         \
 |  / ___|_   _ _ __  _ __ | | | | __ _  ___| | _____  |
@@ -188,6 +188,18 @@
 										</div>
 									</div>
 								</div>
+								<div class="panel panel-default panel-faq">
+									<div class="panel-heading">
+										<a data-toggle="collapse" href="#faq-12">
+											<h4 class="panel-title">Do I have to work the whole time?</h4>
+										</a>
+									</div>
+									<div id="faq-12" class="panel-collapse collapse in">
+										<div class="panel-body">
+											No. We will have dedicated sleeping areas and other fun activities for when you need to take a break.
+										</div>
+									</div>
+								</div>
 							</div>
 							<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 panel-group">
 								<div class="panel panel-default panel-faq">
@@ -223,6 +235,18 @@
 									<div id="faq-7" class="panel-collapse collapse in">
 										<div class="panel-body">
 											All attendees are required to bring their valid student ID (or equivalent school ID) for admission. Bring laptops, phones, chargers, and any other tech you need for the weekend. Sleeping bags, and toiletries are highly recommended.
+										</div>
+									</div>
+								</div>
+								<div class="panel panel-default panel-faq">
+									<div class="panel-heading">
+										<a data-toggle="collapse" href="#faq-8">
+											<h4 class="panel-title">What is the schedule like?</h4>
+										</a>
+									</div>
+									<div id="faq-8" class="panel-collapse collapse in">
+										<div class="panel-body">
+											Check back soon for a detailed schedule.
 										</div>
 									</div>
 								</div>
