Removed duplicate word

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 												</a>
 											</div> -->
 											<div id="sponsor-call-to-action">
-												We're finalizing our sponsor list soon! Check out our sponsorship packages below, or shoot us an email at <a href="mailto:sponsor@gunnhacks.com">sponsor@gunnhacks.com</a> to see how you you can get involved.
+												We're finalizing our sponsor list soon! Check out our sponsorship packages below, or shoot us an email at <a href="mailto:sponsor@gunnhacks.com">sponsor@gunnhacks.com</a> to see how you can get involved.
 											</div>
 											<div id="sponsor-link">
 												<a href="sponsor.pdf" class="btn btn-danger btn-raised">Sponsor GunnHacks</a>
